--- a/src/App.css
+++ b/src/App.css
@@ -1,451 +1,445 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap");
 
 .App-start {
-	width: 100%;
-	font-family: 'Didact Gothic', sans-serif;
+  width: 100%;
+  font-family: "Didact Gothic", sans-serif;
 }
 
-
 .Logo-Background {
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
-	height: 140px;
-	background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
-	cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 140px;
+  background: linear-gradient(179.89deg, #374c4f 0.99%, #5d767b 133.08%);
+  cursor: pointer;
 }
 
 body {
-	margin: 0;
-	padding: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		"Didact Gothic", "Game of Thrones", "Prata"sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	color: white;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    "Didact Gothic", "Game of Thrones", "Prata" sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 header {
-	justify-content: space-evenly;
-	align-items: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .About-Box {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	margin: 0 60px 0 60px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 0 60px 0 60px;
 }
 
 .About-GOG-Media {
-	display: none;
+  display: none;
 }
 
 ul {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .Tree-Options {
-	background: #2b4045;
-	border-top: 2px solid #ecae59;
-	border-bottom: 2px solid #ecae59;
-	height: 43px;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
+  background: #2b4045;
+  border-top: 2px solid #ecae59;
+  border-bottom: 2px solid #ecae59;
+  height: 43px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .Button-worlds {
-	color: #d8a85c;
-	border: none;
-	cursor: pointer;
-	background: transparent;
-	/* font-size: 1.1em; */
-	font-family: "Game of Thrones";
-	transform: translate(0px, 1px);
+  color: #d8a85c;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  /* font-size: 1.1em; */
+  font-family: "Game of Thrones";
+  transform: translate(0px, 1px);
 }
 
 .Button-characters {
-	color: #d8a85c;
-	border: none;
-	cursor: pointer;
-	background: transparent;
-	/* font-size: 1.1em; */
-	font-family: "Game of Thrones";
-	transform: translate(0px, 1px);
+  color: #d8a85c;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  /* font-size: 1.1em; */
+  font-family: "Game of Thrones";
+  transform: translate(0px, 1px);
 }
 
 .Button-aboutGOG {
-	color: #d8a85c;
-	border: none;
-	cursor: pointer;
-	background: transparent;
-	/* font-size: 1.1em; */
-	font-family: "Game of Thrones";
+  color: #d8a85c;
+  border: none;
+  cursor: pointer;
+  background: transparent;
+  /* font-size: 1.1em; */
+  font-family: "Game of Thrones";
 }
 
-
 .Map-Box {
-	height: 500px;
-	overflow-y: scroll;
-	border-bottom: 4px solid #2b4045;
-	background-position: center;
+  height: 500px;
+  overflow-y: scroll;
+  border-bottom: 4px solid #2b4045;
+  background-position: center;
 }
 
 .Map {
-	background-image: url(./components/assets/map-big.png);
-	height: 1050px;
-	background-position: center;
-	cursor: pointer;
-	box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.25), inset 0px -10px 10px rgba(0, 0, 0, 0.25);
+  background-image: url(./components/assets/map-big.png);
+  height: 1050px;
+  background-position: center;
+  cursor: pointer;
+  box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.25),
+    inset 0px -10px 10px rgba(0, 0, 0, 0.25);
 }
 
 main {
-	background: linear-gradient(0deg, #1e3032 19.84%, #374c4f 71.64%);
-	display: flex;
-	justify-content: center;
-	/* height: 100vh; */
+  background: linear-gradient(0deg, #1e3032 19.84%, #374c4f 71.64%);
+  display: flex;
+  justify-content: center;
+  /* height: 100vh; */
 }
 
 .Main-Start {
-	padding-top: 30px;
+  padding-top: 30px;
 }
 
 .Banner {
-	display: flex;
-	justify-content: center;
-	margin: 0 20px 0 20px;
+  display: flex;
+  justify-content: center;
+  margin: 0 20px 0 20px;
 }
 
 .Text {
-	margin: 15px 100px 20px 100px;
-	font-size: 1.4em;
-	padding-top: 30px;
-	text-align: justify;
-	font-family: 'Didact Gothic', sans-serif;
-	color: #E8E8E8;
+  margin: 15px 100px 20px 100px;
+  font-size: 1.4em;
+  padding-top: 30px;
+  text-align: justify;
+  font-family: "Didact Gothic", sans-serif;
+  color: #e8e8e8;
 }
 
 aside {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	max-width: 1100px;
-	margin: 30px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1100px;
+  margin: 30px 0 0 0;
 }
 
 .First-Aside {
-	margin: 0 40px 30px 40px;
-	color: #e8e8e8;
+  margin: 0 40px 30px 40px;
+  color: #e8e8e8;
 }
 
 .Second-Aside {
-	margin: 0 40px 30px 40px;
-	color: #e8e8e8;
+  margin: 0 40px 30px 40px;
+  color: #e8e8e8;
 }
 
 .Glenn {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .Glenn .glenn {
-	margin: 65px 0 40px 0;
-	display: flex;
-	justify-content: center;
+  margin: 65px 0 40px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .Snake {
-	display: flex;
-	justify-content: center;
-	transform: scale(0.5);
-	width: 100%;
+  display: flex;
+  justify-content: center;
+  transform: scale(0.5);
+  width: 100%;
 }
 
 .GOG-Banner {
-	display: none;
+  display: none;
 }
 
 .BannerMediaInfo {
-	display: none;
+  display: none;
 }
 
 .Mini-Glenn {
-	display: none;
+  display: none;
 }
 
 @media (max-width: 1600px) {
-	.Text {
-		margin: 15px 100px 20px 100px;
-		font-size: 1.4em;
-		padding-top: 30px;
-		text-align: justify;
-	}
+  .Text {
+    margin: 15px 100px 20px 100px;
+    font-size: 1.4em;
+    padding-top: 30px;
+    text-align: justify;
+  }
 
-	.Banner {
-		display: none;
-	}
+  .Banner {
+    display: none;
+  }
 
-	.BannerMediaInfo {
-		display: block;
-		display: flex;
-		justify-content: center;
-	}
+  .BannerMediaInfo {
+    display: block;
+    display: flex;
+    justify-content: center;
+  }
 
-	.Snake {
-		display: flex;
-		justify-content: center;
-		transform: scale(0.5);
-		width: 100%;
-	}
-
+  .Snake {
+    display: flex;
+    justify-content: center;
+    transform: scale(0.5);
+    width: 100%;
+  }
 }
 
 @media (max-width: 1200px) {
-	main {
-		flex-direction: column;
-		padding-bottom: 40px;
-		padding-top: 0px;
-	}
+  main {
+    flex-direction: column;
+    padding-bottom: 40px;
+    padding-top: 0px;
+  }
 
+  .Text {
+    margin: 15px 70px 20px 70px;
+    font-size: 1.4em;
+    padding-top: 30px;
+    text-align: justify;
+  }
 
-	.Text {
-		margin: 15px 70px 20px 70px;
-		font-size: 1.4em;
-		padding-top: 30px;
-		text-align: justify;
-	}
+  .GOG-Banner {
+    display: block;
+    float: left;
+    transform: translate(-30px, -70px);
+    margin: 0 40px 0 160px;
+  }
 
-	.GOG-Banner {
-		display: block;
-		float: left;
-		transform: translate(-30px, -70px);
-		margin: 0 40px 0 160px;
-	}
+  .Snake {
+    display: flex;
+    justify-content: center;
+    transform: scale(0.5);
+    width: 100%;
+  }
 
-	.Snake {
-		display: flex;
-		justify-content: center;
-		transform: scale(0.5);
-		width: 100%;
-	}
-
-	.BannerMediaInfo {
-		display: none;
-	}
+  .BannerMediaInfo {
+    display: none;
+  }
 }
 
 @media (max-width: 800px) {
-	.About-GOG-Media {
-		display: block;
-		background-image: url(../src/components/assets/aboutGOGmedia.svg);
-		background-repeat: no-repeat;
-		background-position: center;
-		height: 120px;
-		margin-top: 40px;
-	}
+  .About-GOG-Media {
+    display: block;
+    background-image: url(../src/components/assets/aboutGOGmedia.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 120px;
+    margin-top: 40px;
+  }
 
+  .About-GOG {
+    display: none;
+  }
 
-	.About-GOG {
-		display: none;
-	}
+  .Text {
+    margin: 15px 40px 20px 40px;
+    font-size: 1.4em;
+    padding-top: 30px;
+    text-align: justify;
+  }
 
-	.Text {
-		margin: 15px 40px 20px 40px;
-		font-size: 1.4em;
-		padding-top: 30px;
-		text-align: justify;
-	}
+  .First-Aside {
+    margin: 0 20px 30px 20px;
+    color: #e8e8e8;
+  }
 
-	.First-Aside {
-		margin: 0 20px 30px 20px;
-		color: #e8e8e8;
-	}
+  .Second-Aside {
+    margin: 0 20px 30px 20px;
+    color: #e8e8e8;
+  }
 
-	.Second-Aside {
-		margin: 0 20px 30px 20px;
-		color: #e8e8e8;
-	}
+  .Glenn .glenn {
+    display: none;
+  }
 
-	.Glenn .glenn {
-		display: none;
-	}
+  .Mini-Glenn {
+    display: flex;
+  }
 
-	.Mini-Glenn {
-		display: flex;
-	}
+  .gog-banner {
+    display: block;
+    float: left;
+    transform: translate(-50px, 0px);
+  }
 
-	.gog-banner {
-		display: block;
-		float: left;
-		transform: translate(-50px, 0px);
-	}
-
-	.About-Box {
-		margin: 0;
-	}
+  .About-Box {
+    margin: 0;
+  }
 }
 
 @media (max-width: 800px) {
+  .Button-worlds {
+    font-size: 0.8em;
+  }
 
-	.Button-worlds {
-		font-size: .8em;
-	}
+  .Button-characters {
+    font-size: 0.8em;
+  }
 
-	.Button-characters {
-		font-size: .8em;
-	}
-
-	.Button-aboutGOG {
-		font-size: .8em;
-	}
-
+  .Button-aboutGOG {
+    font-size: 0.8em;
+  }
 }
 
 .SearchBar {
-	padding-top: 60px;
-	padding-bottom: 20px;
+  padding-top: 60px;
+  padding-bottom: 20px;
 }
 
 .character-input {
-	padding: 5px 10px 5px 10px;
-	width: 300px;
+  padding: 5px 10px 5px 10px;
+  width: 300px;
 }
 
 .btm-add-character {
-	font-family: Didact Gothic;
-	margin-bottom: 50px;
-	padding: 10px 20px 10px 20px;
-	width: 150px;
-	border: none;
-	background: #3a5358;
-	border: 1px solid #ecae59;
-	box-sizing: border-box;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	color: #ffffff;
+  font-family: Didact Gothic;
+  margin-bottom: 50px;
+  padding: 10px 20px 10px 20px;
+  width: 150px;
+  border: none;
+  background: #3a5358;
+  border: 1px solid #ecae59;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #ffffff;
 }
 
 .character-item {
-	background-image: url(../src/components/assets/character-card-frame.svg);
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 445px;
+  background-image: url(../src/components/assets/character-card-frame.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 445px;
 }
 
 .card-content {
-	display: flex;
-	flex-direction: column;
-	padding: 5px 13px 25px 13px;
-	justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  padding: 5px 13px 25px 13px;
+  justify-content: space-evenly;
 }
 
 .name-box {
-	display: flex;
-	justify-content: space-between;
-	padding: 0 10px 0 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px 0 10px;
 }
 
 .name {
-	padding: 6px 0 0 0;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  padding: 6px 0 0 0;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .btm-box {
-	display: flex;
-	justify-self: right;
-	align-items: right;
-	background: transparent;
-	border: none;
+  display: flex;
+  justify-self: right;
+  align-items: right;
+  background: transparent;
+  border: none;
 }
 
 .btm-delete-box {
-	background-image: url(../src/components/assets/skull.svg);
-	background-repeat: no-repeat;
-	height: 27px;
-	width: 27px;
-	border: none;
-	margin: 4px 0 2px 10px;
-	background-position: center;
+  background-image: url(../src/components/assets/skull.svg);
+  background-repeat: no-repeat;
+  height: 27px;
+  width: 27px;
+  border: none;
+  margin: 4px 0 2px 10px;
+  background-position: center;
 }
 
 .btm-delete {
-	height: 29px;
-	width: 29px;
-	border: none;
-	background: transparent;
+  height: 29px;
+  width: 29px;
+  border: none;
+  background: transparent;
 }
 
 .btm-edit-box {
-	background-image: url(../src/components/assets/edit.svg);
-	background-repeat: no-repeat;
-	height: 29px;
-	width: 29px;
-	margin: 4px 0 2px 10px;
-	border: none;
-	background-position: center;
+  background-image: url(../src/components/assets/edit.svg);
+  background-repeat: no-repeat;
+  height: 29px;
+  width: 29px;
+  margin: 4px 0 2px 10px;
+  border: none;
+  background-position: center;
 }
 
 .btm-edit {
-	height: 29px;
-	width: 29px;
-	border: none;
-	background: transparent;
+  height: 29px;
+  width: 29px;
+  border: none;
+  background: transparent;
 }
 
 .id {
-	display: none;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  display: none;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .world {
-	display: flex;
-	padding-top: 10px;
-	height: 70px;
-	align-items: center;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  display: flex;
+  padding-top: 10px;
+  height: 70px;
+  align-items: center;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .world-text {
-	padding-left: 10px;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  padding-left: 10px;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .world-pic {
-	height: 70px;
+  height: 70px;
 }
 
 .iq {
-	padding: 15px 10px 10px 10px;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  padding: 15px 10px 10px 10px;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .power {
-	padding: 10px;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  padding: 10px;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .backstory {
-	padding: 10px;
-	height: 90px;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  padding: 10px;
+  height: 90px;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
 
 .About-GOG {
-	background-image: url(../src/components/assets/aboutGOG.svg);
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 120px;
-	margin-top: 40px;
-	font-family: 'Didact Gothic';
-	color: #E8E8E8;
+  background-image: url(../src/components/assets/aboutGOG.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 120px;
+  margin-top: 40px;
+  font-family: "Didact Gothic";
+  color: #e8e8e8;
 }
