--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,9 @@ ul {
   transform: scale(1.04);
   color: #e2b87e;
 }
+.Button-worlds:active {
+	transform: scale(1.1);
+  }
 
 .Button-characters {
   color: #d8a85c;
@@ -86,6 +89,10 @@ ul {
   transform: scale(1.04);
   color: #e2b87e;
 }
+.Button-characters:active {
+	transform: scale(1.1);
+  }
+
 
 .Button-aboutGOG {
   color: #d8a85c;
@@ -100,6 +107,9 @@ ul {
   transform: scale(1.04);
   color: #e2b87e;
 }
+.Button-aboutGOG:active {
+	transform: scale(1.1);
+  }
 
 .Map {
   background-image: url(./components/assets/map-big.png);
@@ -328,7 +338,17 @@ aside {
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: #e8e8e8;
+  cursor: pointer;
+  transition: transform 0.13s;
+  outline: none;
 }
+.btm-add-character:hover {
+	transform: scale(1.04);
+  }
+  .btm-add-character:active {
+	  transform: scale(1.22);
+	  background: #4a676d;
+	}
 
 .character-item {
   background-image: url(../src/components/assets/character-card-frame.svg);
@@ -384,6 +404,8 @@ aside {
   width: 29px;
   border: none;
   background: transparent;
+  cursor: pointer;
+  outline: none;
 }
 
 .btm-edit-box {
@@ -399,12 +421,17 @@ aside {
 .btm-edit-box:hover {
   transform: rotate(1turn) scale(1.8);
 }
+.btm-edit-box:active {
+	transform: scale(2.1);
+  }
 
 .btm-edit {
   height: 29px;
   width: 29px;
   border: none;
   background: transparent;
+  cursor: pointer;
+  outline: none;
 }
 
 .id {
