--- a/src/App.css
+++ b/src/App.css
@@ -118,12 +118,22 @@ ul {
 
 .Map {
   background-image: url(./components/assets/map-big.png);
-  height: 1050px;
+  /* height: 1050px; */
+  height: 800px;
   background-position: center;
   cursor: pointer;
   box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.25),
     inset 0px -10px 10px rgba(0, 0, 0, 0.25);
     cursor: grab; cursor : -o-grab; cursor : -moz-grab; cursor : -webkit-grab;
+}
+
+.Map-Box::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+.Map-Box {
+  -ms-overflow-style: none;
 }
 
 main {
@@ -371,7 +381,7 @@ aside {
   font-family: "Didact Gothic", sans-serif;
   display: flex;
   flex-direction: column;
-  padding: 5px 13px 25px 13px;
+  padding: 5px 21px 25px 21px;
   justify-content: space-evenly;
 }
 
@@ -502,7 +512,8 @@ overflow-y: hidden; */
   color: #e8e8e8;
   overflow-y: hidden;
   background-color: none;
-
+  border: none;
+  outline: none;
   border-bottom: 1px dashed rgba(255, 255, 255, 0.3);
   overflow-y: scroll; /* Add the ability to scroll */
   background: -webkit-linear-gradient(
@@ -528,4 +539,45 @@ overflow-y: hidden; */
   margin-top: 40px;
   font-family: "Didact Gothic";
   color: #e8e8e8;
+}
+
+.Capital-Box {
+  display: flex;
+  max-width: 800px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Didact Gothic", sans-serif;
+}
+.Capital-Name {
+  font-family: "Game of Thrones";
+  color: #ECAE59;
+  padding: 40px 0 0px 0;
+}
+ 
+.Capital-Text {
+  font-family: "Didact Gothic", sans-serif;
+  color: #E8E8E8;
+  font-size: 1.4em;
+  padding: 1em;
+}
+.Capital-Characters-Titel {
+  font-family: "Game of Thrones";
+  color: #ECAE59;
+  padding: 40px 0 0px 0;
+  font-size: 2em;
+}
+
+@media (max-width: 500px) {
+  .Capital-Text {
+    font-size: 1.1em;
+  
+  }
+  .Capital-Name {
+    font-size: 1.15em;
+  }
+  .Capital-Characters-Titel {
+    font-size: 1.15em;
+    padding-top: 0px;
+  }
 }
